--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "adventofcode2022",
   "version": "1.0.0",
   "description": "Adcent of Code 2022 submissions",
-  "main": "index.js",
+  "main": "build/index.js",
+  "type": "module",
   "scripts": {
-    "day1": "npx tsc src/2022-12-01/index.ts && node src/2022-12-01/index.js "
+    "build": "tsc",
+    "index": "node dist/index.js",
+    "day1": "npx tsc && node build/index.js "
   },
   "author": "Vithuran Sadagopan",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.11.10",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
